Take 3: Fixing opacity (actually z-index) issue on Chrome, tiebreak was resolved differently

--- a/src/app/major-arcana/page.module.css
+++ b/src/app/major-arcana/page.module.css
@@ -370,7 +370,7 @@
 }
 
 .frameImage {
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     object-fit: scale-down;
     overflow-x: visible;
@@ -378,6 +378,7 @@
 }
 
 .coreSystem {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
